# line-strip

./: CMakeLists.txt
shader/: default_vert.glsl
src/: glsl.c  glsl.h  main.c
